Fixed heading size and visibility

--- a/style.css
+++ b/style.css
@@ -181,12 +181,13 @@ h1 {
     font-family: 'Main';
     color: var(--text-color);
     text-align: center;
-    font-size: 60px;
+    font-size: 35px;
+    margin-top: 140px;
     margin-bottom: 35px;
 }
 
 .xyz{
-    font-size: 40px;
+    font-size: 20px;
 }
 
 #albumContainer{
